Compiler/flash.output
State 35 conflicts: 1 reduce/reduce
State 49 conflicts: 1 reduce/reduce
State 67 conflicts: 1 reduce/reduce
State 105 conflicts: 10 shift/reduce
State 106 conflicts: 10 shift/reduce
State 107 conflicts: 5 shift/reduce
State 108 conflicts: 5 shift/reduce
State 109 conflicts: 5 shift/reduce
State 110 conflicts: 5 shift/reduce
State 111 conflicts: 5 shift/reduce
State 112 conflicts: 10 shift/reduce
State 113 conflicts: 10 shift/reduce
State 114 conflicts: 10 shift/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: LET declaration functions IN $@1 commands END

    3 declaration: /* empty */
    4            | declaration declarations

    5 declarations: SKIP
    6             | INTEGER id_seqi IDENTIFIER ';'
    7             | BOOLE id_seqb IDENTIFIER ';'
    8             | STR id_seqs IDENTIFIER ';'
    9             | STACK IDENTIFIER ';'

   10 functions: /* empty */
   11          | functions fun

   12 $@2: /* empty */

   13 fun: FUN IDENTIFIER $@2 '(' parameter ')' declaration commands END_FUN

   14 parameter: /* empty */
   15          | parameter parameters

   16 parameters: SKIP
   17           | INTEGER IDENTIFIER ';'
   18           | BOOLE IDENTIFIER ';'
   19           | STR IDENTIFIER ';'

   20 arguments: /* empty */
   21          | argument IDENTIFIER

   22 argument: /* empty */
   23         | argument IDENTIFIER ','

   24 id_seqi: /* empty */
   25        | id_seqi IDENTIFIER ','

   26 id_seqb: /* empty */
   27        | id_seqb IDENTIFIER ','

   28 id_seqs: /* empty */
   29        | id_seqs IDENTIFIER ','

   30 commands: /* empty */
   31         | commands command ';'

   32 command: SKIP
   33        | IDENTIFIER ONTO '<' exp_int '>'
   34        | IDENTIFIER OUTFROM '<' exp_int '>'
   35        | RETURN IDENTIFIER

   36 $@3: /* empty */

   37 command: CALL IDENTIFIER $@3 '(' arguments ')'
   38        | READ IDENTIFIER
   39        | READ '#' IDENTIFIER
   40        | READ '@' IDENTIFIER
   41        | WRITE exp_int
   42        | WRITE '#' exp_bol
   43        | WRITE '@' exp_str
   44        | IDENTIFIER ASSGNOP exp_int
   45        | IDENTIFIER ASSGNOP exp_bol
   46        | IDENTIFIER ASSGNOP exp_str

   47 $@4: /* empty */

   48 $@5: /* empty */

   49 $@6: /* empty */

   50 command: IF exp_int $@4 THEN commands $@5 ELSE $@6 commands FI

   51 $@7: /* empty */

   52 $@8: /* empty */

   53 command: WHILE $@7 exp_int $@8 DO commands END

   54 $@9: /* empty */

   55 $@10: /* empty */

   56 $@11: /* empty */

   57 command: IF exp_bol $@9 THEN commands $@10 ELSE $@11 commands FI

   58 $@12: /* empty */

   59 $@13: /* empty */

   60 command: WHILE $@12 exp_bol $@13 DO commands END

   61 exp_int: NUMBER
   62        | IDENTIFIER
   63        | exp_int '<' exp_int
   64        | exp_int '=' exp_int
   65        | exp_int '>' exp_int
   66        | exp_int GEQ exp_int
   67        | exp_int LEQ exp_int
   68        | exp_int '+' exp_int
   69        | exp_int '-' exp_int
   70        | exp_int '*' exp_int
   71        | exp_int '/' exp_int
   72        | exp_int '^' exp_int
   73        | '(' exp_int ')'

   74 exp_bol: BOOLEAN
   75        | IDENTIFIER

   76 exp_str: STRING
   77        | IDENTIFIER
   78        | exp_str '.' exp_str


Terminals, with rules where they appear

$end (0) 0
'#' (35) 39 42
'(' (40) 13 37 73
')' (41) 13 37 73
'*' (42) 70
'+' (43) 68
',' (44) 23 25 27 29
'-' (45) 69
'.' (46) 78
'/' (47) 71
';' (59) 6 7 8 9 17 18 19 31
'<' (60) 33 34 63
'=' (61) 64
'>' (62) 33 34 65
'@' (64) 40 43
'^' (94) 72
error (256)
STRING (258) 76
BOOLEAN (259) 74
NUMBER (260) 61
IDENTIFIER (261) 6 7 8 9 13 17 18 19 21 23 25 27 29 33 34 35 37 38
    39 40 44 45 46 62 75 77
IF (262) 50 57
WHILE (263) 53 60
SKIP (264) 5 16 32
THEN (265) 50 57
ELSE (266) 50 57
FI (267) 50 57
DO (268) 53 60
END (269) 2 53 60
INTEGER (270) 6 17
READ (271) 38 39 40
WRITE (272) 41 42 43
LET (273) 2
IN (274) 2
BOOLE (275) 7 18
STR (276) 8 19
STACK (277) 9
ASSGNOP (278) 44 45 46
LEQ (279) 67
GEQ (280) 66
ONTO (281) 33
OUTFROM (282) 34
FUN (283) 13
END_FUN (284) 13
RETURN (285) 35
CALL (286) 37


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 2, on right: 0
$@1 (49)
    on left: 1, on right: 2
declaration (50)
    on left: 3 4, on right: 2 4 13
declarations (51)
    on left: 5 6 7 8 9, on right: 4
functions (52)
    on left: 10 11, on right: 2 11
fun (53)
    on left: 13, on right: 11
$@2 (54)
    on left: 12, on right: 13
parameter (55)
    on left: 14 15, on right: 13 15
parameters (56)
    on left: 16 17 18 19, on right: 15
arguments (57)
    on left: 20 21, on right: 37
argument (58)
    on left: 22 23, on right: 21 23
id_seqi (59)
    on left: 24 25, on right: 6 25
id_seqb (60)
    on left: 26 27, on right: 7 27
id_seqs (61)
    on left: 28 29, on right: 8 29
commands (62)
    on left: 30 31, on right: 2 13 31 50 53 57 60
command (63)
    on left: 32 33 34 35 37 38 39 40 41 42 43 44 45 46 50 53 57 60,
    on right: 31
$@3 (64)
    on left: 36, on right: 37
$@4 (65)
    on left: 47, on right: 50
$@5 (66)
    on left: 48, on right: 50
$@6 (67)
    on left: 49, on right: 50
$@7 (68)
    on left: 51, on right: 53
$@8 (69)
    on left: 52, on right: 53
$@9 (70)
    on left: 54, on right: 57
$@10 (71)
    on left: 55, on right: 57
$@11 (72)
    on left: 56, on right: 57
$@12 (73)
    on left: 58, on right: 60
$@13 (74)
    on left: 59, on right: 60
exp_int (75)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73, on right: 33 34
    41 44 50 53 63 64 65 66 67 68 69 70 71 72 73
exp_bol (76)
    on left: 74 75, on right: 42 45 57 60
exp_str (77)
    on left: 76 77 78, on right: 43 46 78


state 0

    0 $accept: . program $end

    LET  shift, and go to state 1

    program  go to state 2


state 1

    2 program: LET . declaration functions IN $@1 commands END

    $default  reduce using rule 3 (declaration)

    declaration  go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    2 program: LET declaration . functions IN $@1 commands END
    4 declaration: declaration . declarations

    SKIP     shift, and go to state 5
    INTEGER  shift, and go to state 6
    BOOLE    shift, and go to state 7
    STR      shift, and go to state 8
    STACK    shift, and go to state 9

    $default  reduce using rule 10 (functions)

    declarations  go to state 10
    functions     go to state 11


state 4

    0 $accept: program $end .

    $default  accept


state 5

    5 declarations: SKIP .

    $default  reduce using rule 5 (declarations)


state 6

    6 declarations: INTEGER . id_seqi IDENTIFIER ';'

    $default  reduce using rule 24 (id_seqi)

    id_seqi  go to state 12


state 7

    7 declarations: BOOLE . id_seqb IDENTIFIER ';'

    $default  reduce using rule 26 (id_seqb)

    id_seqb  go to state 13


state 8

    8 declarations: STR . id_seqs IDENTIFIER ';'

    $default  reduce using rule 28 (id_seqs)

    id_seqs  go to state 14


state 9

    9 declarations: STACK . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 15


state 10

    4 declaration: declaration declarations .

    $default  reduce using rule 4 (declaration)


state 11

    2 program: LET declaration functions . IN $@1 commands END
   11 functions: functions . fun

    IN   shift, and go to state 16
    FUN  shift, and go to state 17

    fun  go to state 18


state 12

    6 declarations: INTEGER id_seqi . IDENTIFIER ';'
   25 id_seqi: id_seqi . IDENTIFIER ','

    IDENTIFIER  shift, and go to state 19


state 13

    7 declarations: BOOLE id_seqb . IDENTIFIER ';'
   27 id_seqb: id_seqb . IDENTIFIER ','

    IDENTIFIER  shift, and go to state 20


state 14

    8 declarations: STR id_seqs . IDENTIFIER ';'
   29 id_seqs: id_seqs . IDENTIFIER ','

    IDENTIFIER  shift, and go to state 21


state 15

    9 declarations: STACK IDENTIFIER . ';'

    ';'  shift, and go to state 22


state 16

    2 program: LET declaration functions IN . $@1 commands END

    $default  reduce using rule 1 ($@1)

    $@1  go to state 23


state 17

   13 fun: FUN . IDENTIFIER $@2 '(' parameter ')' declaration commands END_FUN

    IDENTIFIER  shift, and go to state 24


state 18

   11 functions: functions fun .

    $default  reduce using rule 11 (functions)


state 19

    6 declarations: INTEGER id_seqi IDENTIFIER . ';'
   25 id_seqi: id_seqi IDENTIFIER . ','

    ';'  shift, and go to state 25
    ','  shift, and go to state 26


state 20

    7 declarations: BOOLE id_seqb IDENTIFIER . ';'
   27 id_seqb: id_seqb IDENTIFIER . ','

    ';'  shift, and go to state 27
    ','  shift, and go to state 28


state 21

    8 declarations: STR id_seqs IDENTIFIER . ';'
   29 id_seqs: id_seqs IDENTIFIER . ','

    ';'  shift, and go to state 29
    ','  shift, and go to state 30


state 22

    9 declarations: STACK IDENTIFIER ';' .

    $default  reduce using rule 9 (declarations)


state 23

    2 program: LET declaration functions IN $@1 . commands END

    $default  reduce using rule 30 (commands)

    commands  go to state 31


state 24

   13 fun: FUN IDENTIFIER . $@2 '(' parameter ')' declaration commands END_FUN

    $default  reduce using rule 12 ($@2)

    $@2  go to state 32


state 25

    6 declarations: INTEGER id_seqi IDENTIFIER ';' .

    $default  reduce using rule 6 (declarations)


state 26

   25 id_seqi: id_seqi IDENTIFIER ',' .

    $default  reduce using rule 25 (id_seqi)


state 27

    7 declarations: BOOLE id_seqb IDENTIFIER ';' .

    $default  reduce using rule 7 (declarations)


state 28

   27 id_seqb: id_seqb IDENTIFIER ',' .

    $default  reduce using rule 27 (id_seqb)


state 29

    8 declarations: STR id_seqs IDENTIFIER ';' .

    $default  reduce using rule 8 (declarations)


state 30

   29 id_seqs: id_seqs IDENTIFIER ',' .

    $default  reduce using rule 29 (id_seqs)


state 31

    2 program: LET declaration functions IN $@1 commands . END
   31 commands: commands . command ';'

    IDENTIFIER  shift, and go to state 33
    IF          shift, and go to state 34
    WHILE       shift, and go to state 35
    SKIP        shift, and go to state 36
    END         shift, and go to state 37
    READ        shift, and go to state 38
    WRITE       shift, and go to state 39
    RETURN      shift, and go to state 40
    CALL        shift, and go to state 41

    command  go to state 42


state 32

   13 fun: FUN IDENTIFIER $@2 . '(' parameter ')' declaration commands END_FUN

    '('  shift, and go to state 43


state 33

   33 command: IDENTIFIER . ONTO '<' exp_int '>'
   34        | IDENTIFIER . OUTFROM '<' exp_int '>'
   44        | IDENTIFIER . ASSGNOP exp_int
   45        | IDENTIFIER . ASSGNOP exp_bol
   46        | IDENTIFIER . ASSGNOP exp_str

    ASSGNOP  shift, and go to state 44
    ONTO     shift, and go to state 45
    OUTFROM  shift, and go to state 46


state 34

   50 command: IF . exp_int $@4 THEN commands $@5 ELSE $@6 commands FI
   57        | IF . exp_bol $@9 THEN commands $@10 ELSE $@11 commands FI

    BOOLEAN     shift, and go to state 47
    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '('         shift, and go to state 50

    exp_int  go to state 51
    exp_bol  go to state 52


state 35

   53 command: WHILE . $@7 exp_int $@8 DO commands END
   60        | WHILE . $@12 exp_bol $@13 DO commands END

    BOOLEAN     reduce using rule 58 ($@12)
    IDENTIFIER  reduce using rule 51 ($@7)
    IDENTIFIER  [reduce using rule 58 ($@12)]
    $default    reduce using rule 51 ($@7)

    $@7   go to state 53
    $@12  go to state 54


state 36

   32 command: SKIP .

    $default  reduce using rule 32 (command)


state 37

    2 program: LET declaration functions IN $@1 commands END .

    $default  reduce using rule 2 (program)


state 38

   38 command: READ . IDENTIFIER
   39        | READ . '#' IDENTIFIER
   40        | READ . '@' IDENTIFIER

    IDENTIFIER  shift, and go to state 55
    '#'         shift, and go to state 56
    '@'         shift, and go to state 57


state 39

   41 command: WRITE . exp_int
   42        | WRITE . '#' exp_bol
   43        | WRITE . '@' exp_str

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 58
    '('         shift, and go to state 50
    '#'         shift, and go to state 59
    '@'         shift, and go to state 60

    exp_int  go to state 61


state 40

   35 command: RETURN . IDENTIFIER

    IDENTIFIER  shift, and go to state 62


state 41

   37 command: CALL . IDENTIFIER $@3 '(' arguments ')'

    IDENTIFIER  shift, and go to state 63


state 42

   31 commands: commands command . ';'

    ';'  shift, and go to state 64


state 43

   13 fun: FUN IDENTIFIER $@2 '(' . parameter ')' declaration commands END_FUN

    $default  reduce using rule 14 (parameter)

    parameter  go to state 65


state 44

   44 command: IDENTIFIER ASSGNOP . exp_int
   45        | IDENTIFIER ASSGNOP . exp_bol
   46        | IDENTIFIER ASSGNOP . exp_str

    STRING      shift, and go to state 66
    BOOLEAN     shift, and go to state 47
    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 67
    '('         shift, and go to state 50

    exp_int  go to state 68
    exp_bol  go to state 69
    exp_str  go to state 70


state 45

   33 command: IDENTIFIER ONTO . '<' exp_int '>'

    '<'  shift, and go to state 71


state 46

   34 command: IDENTIFIER OUTFROM . '<' exp_int '>'

    '<'  shift, and go to state 72


state 47

   74 exp_bol: BOOLEAN .

    $default  reduce using rule 74 (exp_bol)


state 48

   61 exp_int: NUMBER .

    $default  reduce using rule 61 (exp_int)


state 49

   62 exp_int: IDENTIFIER .
   75 exp_bol: IDENTIFIER .

    THEN      reduce using rule 62 (exp_int)
    THEN      [reduce using rule 75 (exp_bol)]
    $default  reduce using rule 62 (exp_int)


state 50

   73 exp_int: '(' . exp_int ')'

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 58
    '('         shift, and go to state 50

    exp_int  go to state 73


state 51

   50 command: IF exp_int . $@4 THEN commands $@5 ELSE $@6 commands FI
   63 exp_int: exp_int . '<' exp_int
   64        | exp_int . '=' exp_int
   65        | exp_int . '>' exp_int
   66        | exp_int . GEQ exp_int
   67        | exp_int . LEQ exp_int
   68        | exp_int . '+' exp_int
   69        | exp_int . '-' exp_int
   70        | exp_int . '*' exp_int
   71        | exp_int . '/' exp_int
   72        | exp_int . '^' exp_int

    LEQ  shift, and go to state 74
    GEQ  shift, and go to state 75
    '-'  shift, and go to state 76
    '+'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '^'  shift, and go to state 80
    '<'  shift, and go to state 81
    '>'  shift, and go to state 82
    '='  shift, and go to state 83

    $default  reduce using rule 47 ($@4)

    $@4  go to state 84


state 52

   57 command: IF exp_bol . $@9 THEN commands $@10 ELSE $@11 commands FI

    $default  reduce using rule 54 ($@9)

    $@9  go to state 85


state 53

   53 command: WHILE $@7 . exp_int $@8 DO commands END

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 58
    '('         shift, and go to state 50

    exp_int  go to state 86


state 54

   60 command: WHILE $@12 . exp_bol $@13 DO commands END

    BOOLEAN     shift, and go to state 47
    IDENTIFIER  shift, and go to state 87

    exp_bol  go to state 88


state 55

   38 command: READ IDENTIFIER .

    $default  reduce using rule 38 (command)


state 56

   39 command: READ '#' . IDENTIFIER

    IDENTIFIER  shift, and go to state 89


state 57

   40 command: READ '@' . IDENTIFIER

    IDENTIFIER  shift, and go to state 90


state 58

   62 exp_int: IDENTIFIER .

    $default  reduce using rule 62 (exp_int)


state 59

   42 command: WRITE '#' . exp_bol

    BOOLEAN     shift, and go to state 47
    IDENTIFIER  shift, and go to state 87

    exp_bol  go to state 91


state 60

   43 command: WRITE '@' . exp_str

    STRING      shift, and go to state 66
    IDENTIFIER  shift, and go to state 92

    exp_str  go to state 93


state 61

   41 command: WRITE exp_int .
   63 exp_int: exp_int . '<' exp_int
   64        | exp_int . '=' exp_int
   65        | exp_int . '>' exp_int
   66        | exp_int . GEQ exp_int
   67        | exp_int . LEQ exp_int
   68        | exp_int . '+' exp_int
   69        | exp_int . '-' exp_int
   70        | exp_int . '*' exp_int
   71        | exp_int . '/' exp_int
   72        | exp_int . '^' exp_int
